@@ -2401,6 +2401,11 @@ int	 							rval = RVAL_ERR_AND_DO_FREENODE;
 			rtems_filesystem_freenode(pathloc);
 
 			if (rtems_filesystem_evaluate_path(buf, flags, pathloc, 1)) {
+				/* If evalpath fails then there is no valid node
+				 * attached to pathloc; hence we must not attempt
+				 * to free the node
+				 */
+				rval = RVAL_ERR_BUT_DONT_FREENODE;
 				goto cleanup;
 			}
 		}
