@@ -1,4 +1,8 @@
 Changes since RTEMS-NFS 1.7:
+ - BUGFIX: must not attempt to release node if rtems_filesystem_evaluate_path()
+   fails in nfs_eval_link() since pathloc contains no valid node.
+   (Occasional crashes during libtecla filename completion might be caused
+   by this bug.)
 Changes since RTEMS-NFS 1.6:
  - when using rtems-style installation path (w/o SSRL tweaks) headers
    must be installed to '<bspdir>/lib/include', not '<bspdir>/include'.
